Tests/Conformance/Generated/Builtin/Constant/Integer/Integer10.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Integer.Integer10

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_integer_integer10 "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/integer/integer10/integer10.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Integer.Integer10
